<resources>
    <string name="app_name">Golf Tracker</string>
    <string name="overall_stats">Overall Stats</string>
    <string name="new_round">New Round</string>
    <string name="previous_rounds">Previous Rounds</string>
    <string name="eighteen_holes">18 Holes</string>
    <string name="nine_holes">9 Holes</string>
    <string name="holes_played">Holes Played:</string>
    <string name="hole">Hole</string>
    <string name="par" translatable="false">Par</string>
    <string name="score">Score</string>
    <string name="putts" translatable="false">Putts</string>
    <string name="add_round">Add Round</string>
    <string name="cancel">Cancel</string>
    <string name="average_putts">Average Putts</string>
    <string name="date">Date</string>
    <string name="back">Back</string>
    <string name="average_score">Average Score</string>
    <string name="handicap">Handicap</string>
    <string name="putts_per_hole">Putts Per Hole</string>
    <string name="total_rounds">Total Rounds</string>
    <string name="last_10_scores">Last 10 Scores</string>
    <string name="invalid_entries">Some Entries are Invalid</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_confirmation">Are you sure you want to cancel?</string>
    <string name="share">Share</string>
    <string name="share_subject">My Golf Round</string>
    <string name="share_using">Share Using?</string>
    <string name="golf_ball_logo">Golf Ball Logo</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete the round?</string>
    <string name="share_message">I scored %1$s%2$d in golf on %3$s with an average of %4$.1f putts per hole</string>
    <string name="score_string" translatable="false">%1$s%2$.1f</string>
</resources>