<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverallStatsFragment">

    <TextView
        android:id="@+id/toolbarTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/overall_stats"
        android:textColor="?attr/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTitle2" />

    <TextView
        android:id="@+id/averageScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/average_score"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/handicapLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/averageScoreLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/previous_10_rounds"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTitle2" />

    <TextView
        android:id="@+id/handicapLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/handicap"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/puttsPerHoleLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/puttsPerHoleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/putts_per_hole"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/TotalRoundsLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TotalRoundsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/total_rounds"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/averageScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/handicap"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/handicap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/puttsPerHole"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/puttsPerHole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/totalRounds"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="75dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/back"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>